01-flux/gilfoyle/apps/ntfy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy-deployment
  labels:
    app: ntfy-deployment
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: ntfy-pod
  template:
    metadata:
      labels:
        app: ntfy-pod
    spec:
      containers:
        - name: ntfy 
          image: binwiederhier/ntfy:v2.21.0
          args: ["serve"]
          ports: 
            - containerPort: 80
              name: http-ntfy
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 150m
              memory: 100Mi
          volumeMounts:
            - mountPath: /etc/ntfy/server.yml
              subPath: server.yml
              name: config-volume
            - mountPath: /var/cache/ntfy
              name: cache-volume
      volumes:
        - name: config-volume
          secret:
            secretName: ntfy-server-secret
        - name: cache-volume
          persistentVolumeClaim:
            claimName: ntfy-pvc
